--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@
 /Lab8/files_tagged.csv
 /Lab8/files_tagged_normal.csv
 /files_tagged_normal.csv
+/Lab10/lqad-pl-1
+/Lab10/lqad-pl-1-allegro-herbert-base-cased-dev
+/Lab10/lqad-pl-1-allegro-herbert-base-cased-dev-bak
+/Lab10/lqad-pl-1-Geotrend-distilbert-cased-dev
+/Lab10/lqad-pl-1-henryk-bert-base-multilingual-cased-finetuned-polish-squad2-dev
+/Lab10/lqad-pl-1-kleczek-bert-cased-dev
